get_robust_list.2: Reword EINVAL error text
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/get_robust_list.2
+++ b/man2/get_robust_list.2
@@ -89,9 +89,8 @@ system call can fail with the following error:
 .TP
 .B EINVAL
 .I len
-does not match the size of structure
-.B struct robust_list_head
-expected by kernel.
+does not equal
+.IR "sizeof(struct\ robust_list_head)" .
 .PP
 The
 .BR get_robust_list ()
