--- a/man2/get_robust_list.2
+++ b/man2/get_robust_list.2
@@ -43,8 +43,8 @@ get_robust_list, set_robust_list \- get/set list of robust futexes
 .IR Note :
 There are no glibc wrappers for these system calls; see NOTES.
 .SH DESCRIPTION
-The robust futex implementation needs to maintain per-thread lists of robust
-futexes which are unlocked when the thread exits.
+The robust futex implementation needs to maintain per-thread lists of
+the robust futexes which are to be unlocked when the thread exits.
 These lists are managed in user space; the kernel is notified about only
 the location of the head of the list.
 
