getfsent.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getfsent.3
+++ b/man3/getfsent.3
@@ -117,16 +117,21 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw35 lb lb
+lb lb lbw24
 l l l.
 Interface	Attribute	Value
 T{
-.BR setfsent (),
-.BR getfsent (),
 .BR endfsent (),
+.br
+.BR setfsent ()
+T}	Thread safety	MT-Unsafe race:fsent
+T{
+.BR getfsent (),
+.br
 .BR getfsspec (),
+.br
 .BR getfsfile ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:fsent locale
 .TE
 .SH CONFORMING TO
 These functions are not in POSIX.1-2001.
