arch_prctl.2: Minor tweaks to Andy Lutomiski's patch
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/arch_prctl.2
+++ b/man2/arch_prctl.2
@@ -118,7 +118,7 @@ As an optimization, if a 32-bit TLS base address is used,
 .BR arch_prctl (2)
 may use a real TLS entry as if
 .BR set_thread_area (2)
-had been called instead of manipulating the segment base register directly.
+had been called, instead of manipulating the segment base register directly.
 Memory in the first 2GB of address space can be allocated by using
 .BR mmap (2)
 with the
@@ -138,8 +138,9 @@ You have to declare it yourself for now.
 This may be fixed in future glibc versions.
 
 .I FS
-may be already used by the threading library.  Glibc programs that use
-.I ARCH_SET_FS
+may be already used by the threading library.
+Glibc programs that use
+.B ARCH_SET_FS
 directly are very likely to crash.
 .SH SEE ALSO
 .BR mmap (2),
