modify_ldt.2: Tweaks after feedback from Andy Lutomirski
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/modify_ldt.2
+++ b/man2/modify_ldt.2
@@ -100,7 +100,7 @@ field is the segment type (data, expand-down data, non-conforming code, or
 conforming code).
 The other fields match their descriptions in the CPU manual, although
 .BR modify_ldt ()
-cannot set the accessed bit.
+cannot set the hardware-defined "accessed" bit described in the CPU manual.
 .PP
 A
 .I user_desc
@@ -119,7 +119,9 @@ and
 .I limit
 to 0.
 .PP
-A conforming code segment will be rejected if
+A conforming code segment (i.e., one with
+.IR contents==3 )
+will be rejected if
 .I
 func
 is 1 or if
@@ -186,9 +188,11 @@ The normal use for
 is to run legacy 16-bit or segmented 32-bit code.
 Not all kernels allow 16-bit segments to be installed, however.
 .SH BUGS
-On 64-bit kernels before Linux 3.19, one of the padding bits in
-.IR user_desc ,
-if set, would prevent the descriptor from being considered empty.
+On 64-bit kernels before Linux 3.19,
+.\" commit e30ab185c490e9a9381385529e0fd32f0a399495
+setting the "lm" padding bit in
+.IR user_desc
+prevents the descriptor from being considered empty.
 .SH SEE ALSO
 .BR arch_prctl (2),
 .BR set_thread_area (2),
