arch_prctl.2: Tweaks after feedback from Andy Lutomirski
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/arch_prctl.2
+++ b/man2/arch_prctl.2
@@ -125,7 +125,7 @@ with the
 .B MAP_32BIT
 flag.
 
-As a result, using
+Because of the aforementioned optimization, using
 .BR arch_prctl (2)
 and
 .BR set_thread_area (2)
@@ -139,7 +139,7 @@ This may be fixed in future glibc versions.
 
 .I FS
 may be already used by the threading library.
-Glibc programs that use
+Programs that use
 .B ARCH_SET_FS
 directly are very likely to crash.
 .SH SEE ALSO
