set_thread_area.2: Tweaks after feedback from Andy Lutomirski
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/set_thread_area.2
+++ b/man2/set_thread_area.2
@@ -67,7 +67,7 @@ When
 .BR set_thread_area ()
 is passed an
 .I entry_number
-of \-1, it finds a free TLS entry.
+of \-1, it searches for a free TLS entry.
 If
 .BR set_thread_area ()
 finds a free TLS entry, the value of
@@ -137,9 +137,12 @@ This is not normally a problem, as
 .BR arch_prctl (2)
 is normally used only by 64-bit programs.
 .SH BUGS
-On 64-bit kernels before Linux 3.19, one of the padding bits in
+On 64-bit kernels before Linux 3.19,
+.\" commit e30ab185c490e9a9381385529e0fd32f0a399495
+one of the padding bits in
 .IR user_desc ,
-if set, would prevent the descriptor from being considered empty.
+if set, would prevent the descriptor from being considered empty (see
+.BR modify_ldt (2)).
 As a result, the only reliable way to clear a TLS entry is to use
 .BR memset (3)
 to zero the entire
