toupper.3: Modify thread-safety information
After researching and talking, we think toupper() and tolower()
should not be marked with locale.
After changing, the markings match glbc markings.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/toupper.3
+++ b/man3/toupper.3
@@ -122,9 +122,8 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR toupper (),
-.BR tolower ()
-T}	Thread safety	MT-Safe locale
-T{
+.BR tolower (),
+.br
 .BR toupper_l (),
 .BR tolower_l ()
 T}	Thread safety	MT-Safe
