inet.3: Modify thread-safety information
After researching and talking, we think inet_network() and
inet_ntoa() should be marked with locale.
After changing, the markings match glbc markings.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/inet.3
+++ b/man3/inet.3
@@ -225,12 +225,12 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR inet_aton (),
-.BR inet_addr ()
+.BR inet_addr (),
+.br
+.BR inet_network (),
+.BR inet_ntoa ()
 T}	Thread safety	MT-Safe locale
 T{
-.BR inet_network (),
-.BR inet_ntoa (),
-.br
 .BR inet_makeaddr (),
 .BR inet_lnaof (),
 .br
