ioctl_fat.2: Add kernel version numbers for some ioctl() commands
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/ioctl_fat.2
+++ b/man2/ioctl_fat.2
@@ -187,17 +187,22 @@ does not refer to an object in a FAT filesystem.
 For further error values, see
 .BR ioctl (2).
 .SH VERSIONS
+.BR VFAT_IOCTL_READDIR_BOTH
+and
+.B VFAT_IOCTL_READDIR_SHORT
+first appeared in Linux 2.0.
+
+.BR FAT_IOCTL_GET_ATTRIBUTES
+and
+.BR FAT_IOCTL_SET_ATTRIBUTES
+first appeared
+.\" just before we got Git history
+in Linux 2.6.12.
+
 .B FAT_IOCTL_GET_VOLUME_ID
 was introduced in version 3.11
 .\" commit 6e5b93ee55d401f1619092fb675b57c28c9ed7ec
 of the Linux kernel.
-.PP
-.BR FAT_IOCTL_GET_ATTRIBUTES ,
-.BR FAT_IOCTL_SET_ATTRIBUTES ,
-.BR VFAT_IOCTL_READDIR_BOTH ,
-and
-.B VFAT_IOCTL_READDIR_SHORT
-were introduced before version 2.6.28 of the Linux kernel.
 .SH "CONFORMING TO"
 This API is Linux-specific.
 .SH EXAMPLE
