ioctl_fat.2: Tweak some pieces in EXAMPLE
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/ioctl_fat.2
+++ b/man2/ioctl_fat.2
@@ -219,13 +219,13 @@ The following was recorded when applying the program for the file
 
 .in +4n
 .nf
-# ./toggle_archive_flag /mnt/user/foo
+# ./toggle_fat_archive_flag /mnt/user/foo
 Archive flag is set
 Toggling archive flag
 Archive flag is not set
 .fi
 .in
-.SS Program source
+.SS Program source (toggle_fat_archive_flag.c)
 .in +4n
 .nf
 #include <fcntl.h>
@@ -320,11 +320,11 @@ directory
 
 .in +4n
 .nf
-$ ./display_volume_id /mnt/user
+$ ./display_fat_volume_id /mnt/user
 Volume ID 6443-6241
 .fi
 .in
-.SS Program source
+.SS Program source (display_fat_volume_id.c)
 .in +4n
 .nf
 #include <fcntl.h>
