--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -99,6 +99,7 @@ or zero-fill-on-demand pages for mappings
 without an underlying file.
 .TP
 .BR MADV_REMOVE " (since Linux 2.6.16)"
+.\" commit f6b3ec238d12c8cc6cc71490c6e3127988460349
 Free up a given range of pages
 and its associated backing store.
 Currently,
@@ -112,6 +113,7 @@ error
 .\" hot-plug memory on UML.
 .TP
 .BR MADV_DONTFORK " (since Linux 2.6.16)"
+.\" commit f822566165dd46ff5de9bf895cfa6c51f53bb0c4
 .\" See http://lwn.net/Articles/171941/
 Do not make the pages in this range available to the child after a
 .BR fork (2).
@@ -149,6 +151,7 @@ restoring the default behavior, whereby a mapping is inherited across
 .BR fork (2).
 .TP
 .BR MADV_HWPOISON " (since Linux 2.6.32)
+.\" commit 9893e49d64a4874ea67849ee2cfbf3f3d6817573
 Poison a page and handle it like a hardware memory corruption.
 This operation is available only for privileged
 .RB ( CAP_SYS_ADMIN )
@@ -161,6 +164,7 @@ it is available only if the kernel was configured with
 .BR CONFIG_MEMORY_FAILURE .
 .TP
 .BR MADV_SOFT_OFFLINE " (since Linux 2.6.33)
+.\" commit afcf938ee0aac4ef95b1a23bac704c6fbeb26de6
 Soft offline the pages in the range specified by
 .I addr
 and
@@ -179,6 +183,7 @@ it is available only if the kernel was configured with
 .BR CONFIG_MEMORY_FAILURE .
 .TP
 .BR MADV_MERGEABLE " (since Linux 2.6.32)"
+.\" commit f8af4da3b4c14e7267c4ffb952079af3912c51c5
 Enable Kernel Samepage Merging (KSM) for the pages in the range specified by
 .I addr
 and
@@ -213,6 +218,7 @@ and
 .IR length .
 .TP
 .BR MADV_HUGEPAGE " (since Linux 2.6.38)"
+.\" commit 0af4e98b6b095c74588af04872f83d333c958c32
 .\" http://lwn.net/Articles/358904/
 .\" https://lwn.net/Articles/423584/
 Enables Transparent Huge Pages (THP) for pages in the range specified by
@@ -249,6 +255,8 @@ and
 will not be collapsed into huge pages.
 .TP
 .BR MADV_DONTDUMP " (since Linux 3.4)"
+.\" commit 909af768e88867016f427264ae39d27a57b6a8ed
+.\" commit accb61fe7bb0f5c2a4102239e4981650f9048519
 Exclude from a core dump those pages in the range specified by
 .I addr
 and
