madvise.2: Explicitly list the five flags provided by posix_fadvise()
Over time, bit rot has afflicted this page. Since the original
text was written many new Linux-specific flags have been added.
So, now it's better to explicitly list the flags that
correspond to the POSIX analog of madvise().

Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -345,8 +345,11 @@ POSIX.1-2001 describes
 with constants
 .BR POSIX_MADV_NORMAL ,
 .BR POSIX_MADV_RANDOM ,
-and so on,
-with a behavior close to that described here.
+.BR POSIX_MADV_SEQUENTIAL ,
+.BR POSIX_MADV_WILLNEED ,
+and
+.BR POSIX_MADV_DONTNEED ,
+and so on, with a behavior close to the similarly named flags listed above.
 There is a similar
 .BR posix_fadvise (2)
 for file access.
