madvise.2: Mention POSIX.1-2008 addition of POSIX_MADV_NOREUSE
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -356,6 +356,10 @@ with constants
 and
 .BR POSIX_MADV_DONTNEED ,
 and so on, with a behavior close to the similarly named flags listed above.
+(POSIX.1-2008 adds a further flag,
+.BR POSIX_MADV_NOREUSE ,
+that has no analog in
+.BR madvise (2)).
 There is a similar
 .BR posix_fadvise (2)
 for file access.
