madvise.2: Move mention of posix_fadvise() from CONFORMING TO to SEE ALSO
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -360,9 +360,6 @@ and so on, with a behavior close to the similarly named flags listed above.
 .BR POSIX_MADV_NOREUSE ,
 that has no analog in
 .BR madvise (2)).
-There is a similar
-.BR posix_fadvise (2)
-for file access.
 
 .BR MADV_REMOVE ,
 .BR MADV_DONTFORK ,
@@ -404,5 +401,6 @@ from the system call, as it should).
 .BR mprotect (2),
 .BR msync (2),
 .BR munmap (2),
+.BR posix_fadvise (2),
 .BR prctl (2),
 .BR core (5)
