--- a/man2/ioctl_fat.2
+++ b/man2/ioctl_fat.2
@@ -305,7 +305,7 @@ main(int argc, char *argv[])
 
     close(fd);
 
-    return EXIT_SUCCESS;
+    exit(EXIT_SUCCESS);
 }
 .fi
 .in
@@ -369,7 +369,7 @@ main(int argc, char *argv[])
 
     close(fd);
 
-    return EXIT_SUCCESS;
+    exit(EXIT_SUCCESS);
 }
 .fi
 .in
@@ -453,7 +453,7 @@ main(int argc, char *argv[])
      */
     close(fd);
 
-    return EXIT_SUCCESS;
+    exit(EXIT_SUCCESS);
 }
 .fi
 .in
