--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -299,9 +299,9 @@ This error can occur for the following reasons:
 .RS
 .IP * 3
 The value
-.I len
+.I length
 is negative.
-.\" .I len
+.\" .I length
 .\" is zero,
 .IP *
 .I addr
